# wingpanel-indicator-periods

./: README.md  meson.build
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.phalbert.wingpanel-indicator-periods-indicator.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+158 more)
schemas/: com.github.phalbert.wingpanel-indicator-periods.gschema.xml
src/: Indicator.vala
src/Services/: Day.vala  Month.vala  Settings.vala  Utils.vala  Week.vala  Year.vala
src/Widgets/: DisplayWidget.vala  MainView.vala  PopoverWidget.vala  SettingsView.vala
